docs: 修正列表頁相關的API文件
- Resource 的回應範例改放在 Controller
- 沒有找到產品的回應修正為200
