# app/Http/Resources/ProductResource.php
@@ -9,15 +9,6 @@ class ProductResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
-     *
-     * @response scenario=success status=200 {
-     *   "id": 1,
-     *   "name": "Apple",
-     *   "price": 100
-     * }
-     * @response scenario=error status=404 {
-     *   "message": "Product Not Found"
-     * }
      */
     public function toArray($request)
     {
